--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -11,6 +11,7 @@ body {
     "aside"
     "nav"
     "main"
+    "section"
     "footer";
     }
 
@@ -62,8 +63,8 @@ aside ul {
 aside ul li {
     list-style: none;
     padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 0px;
+    padding-right: 40px;
     cursor: pointer;
 }
 
@@ -105,12 +106,38 @@ main {
 
 section {
     grid-area: section;
+    text-align: center;
+    background: antiquewhite;
 }
+
+.pagination {
+    display: inline-block;
+    padding-bottom: 15px;
+  }
+
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .pagination a.active {
+    background-color: #473829;
+    color: white;
+    border-radius: 5px;
+  }
+  
+  .pagination a:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 5px;
+  }
 
 footer {
     background: #ceb598;
     grid-area: footer;
     color: #473829;
+    height: 70px;
 }
 
 @media (min-width: 576px) {
@@ -135,7 +162,6 @@ footer {
 
     .card {
         width: 18rem;
-        margin-bottom: 30px;
         margin: 0px 33px;
         margin-bottom: 30px;
     }
@@ -158,6 +184,10 @@ footer {
     aside ul {
         display: flex;
         flex-direction: column;
+    }
+
+    footer {
+        height: 150px;
     }
 }
 
