--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -21,7 +21,7 @@ nav {
 
 .filtro {
     text-align: center;
-    background-color: antiquewhite;
+    background-color: #e4d3be;
     padding-bottom: 20px;
 }
 
@@ -35,7 +35,8 @@ nav {
 
 
 aside {
-    background: #eed3b5;
+    /* background: #eed3b5; */
+    background: antiquewhite;
     grid-area: aside;
     display: flex;
     justify-content: space-between;
@@ -69,7 +70,7 @@ aside ul li {
 }
 
 main {
-    background:antiquewhite;
+    background:#e4d3be;
     grid-area: main;
     display: flex;
     text-align: center;
@@ -94,7 +95,7 @@ main {
 }
 
 .info {
-    background-color: #996A52;
+    background-color: #473829;
     outline: none;
     border: none;
     border-radius: 2px;
@@ -107,7 +108,7 @@ main {
 section {
     grid-area: section;
     text-align: center;
-    background: antiquewhite;
+    background: #e4d3be;
 }
 
 .pagination {
@@ -134,10 +135,10 @@ section {
   }
 
 footer {
-    background: #ceb598;
+    background: #473829;
     grid-area: footer;
-    color: #473829;
-    height: 70px;
+    color: white;
+    height: 55px;
 }
 
 @media (min-width: 576px) {
@@ -184,10 +185,6 @@ footer {
     aside ul {
         display: flex;
         flex-direction: column;
-    }
-
-    footer {
-        height: 150px;
     }
 }
 
